--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,64 +15,24 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
       
-    - name: Generate ABC file list
-      run: |
-        python3 << 'EOF'
-import json
-import os
-import glob
-
-def generate_file_list():
-    file_list = []
-    
-    # Добавляем корневую папку partitures
-    file_list.append({
-        "path": "/partitures/",
-        "name": "partitures",
-        "type": "folder"
-    })
-    
-    # Находим все папки
-    for root, dirs, files in os.walk('partitures'):
-        for dir_name in dirs:
-            if dir_name != '.git':  # Исключаем .git папки
-                dir_path = os.path.join(root, dir_name)
-                web_path = '/' + dir_path + '/'
-                file_list.append({
-                    "path": web_path,
-                    "name": dir_name,
-                    "type": "folder"
-                })
-    
-    # Находим все ABC файлы
-    abc_files = glob.glob('partitures/**/*.abc', recursive=True)
-    for abc_file in abc_files:
-        html_path = '/' + abc_file.replace('.abc', '.html')
-        file_name = os.path.basename(abc_file).replace('.abc', '')
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
         
-        file_list.append({
-            "path": html_path,
-            "name": file_name,
-            "type": "file"
-        })
-    
-    # Сохраняем в JSON
-    with open('partitures/filelist.json', 'w', encoding='utf-8') as f:
-        json.dump(file_list, f, ensure_ascii=False, indent=2)
-    
-    print(f"Generated file list with {len(file_list)} items")
-
-generate_file_list()
-EOF
-
-    - name: Commit generated filelist
+    - name: Generate partitures
+      run: |
+        node generate-partitures.js
+        
+    - name: Commit generated files
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add partitures/filelist.json
-        git diff --staged --quiet || git commit -m "Auto-generate ABC file list"
+        git add partitures/
+        git diff --staged --quiet || git commit -m "Auto-generate partitures from ABC files"
         git push
-
+        
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
       with:
