--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,15 @@ on:
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  generate-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -20,15 +26,6 @@ jobs:
       with:
         node-version: '18'
         
-    - name: Debug - Show current structure
-      run: |
-        echo "=== Current structure ==="
-        find . -name "*.abc" -o -name "*.html" -o -name "*.md" | grep -E "(abc|partitures)" | sort
-        echo "=== ABC folder ==="
-        ls -la abc/ || echo "No abc folder"
-        echo "=== Partitures folder ==="
-        ls -la partitures/ || echo "No partitures folder"
-        
     - name: Generate partitures from ABC files
       run: |
         echo "=== Generating partitures from ABC files ==="
@@ -38,19 +35,8 @@ jobs:
     - name: Show generated files
       run: |
         echo "=== Generated structure ==="
-        find partitures -type f | sort
-        echo "=== File contents ==="
         ls -la partitures/
-        [ -f "partitures/index.md" ] && echo "index.md exists" || echo "index.md MISSING"
-        [ -f "partitures/filelist.json" ] && echo "filelist.json exists" || echo "filelist.json MISSING"
-        
-    - name: Commit generated partitures
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add partitures/
-        git status
-        git diff --staged --quiet || (git commit -m "Auto-generate: Update partitures from ABC source" && git push) || echo "No changes to commit"
+        find partitures -type f | sort
         
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
@@ -60,17 +46,30 @@ jobs:
     - name: Install Jekyll
       run: gem install jekyll jekyll-relative-links
         
-    - name: Build site
+    - name: Build site with Jekyll
       run: jekyll build
       
-    - name: Debug - Show built site
+    - name: Show built site
       run: |
         echo "=== Built site structure ==="
-        find _site -name "*.html" | sort
-        [ -f "_site/partitures/index.html" ] && echo "partitures/index.html EXISTS" || echo "partitures/index.html MISSING"
+        ls -la _site/
+        find _site -name "*.html" | head -20
+        
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
       
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_site
+        path: ./_site
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
