--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,19 @@
-title: "Нотная библиотека и тренажер"
-description: "Церковные песнопения для обучения хоровому пению"
+title: "Нотная библиотека"
+description: "Церковные песнопения для обучения"
 baseurl: ""
 url: "https://voctrainer.github.io"
 
-# Настройки Jekyll
-theme: minima
+# Убираем тему minima, используем кастомные layout'ы
+theme: null
+
 plugins:
   - jekyll-relative-links
 
-# Исключите ABC файлы и плагины
-exclude:
-  - "*.abc"
-  - "_plugins"
-  - "convert_abc_to_html.py"
-
 defaults:
+  - scope:
+      path: ""
+    values:
+      layout: "default"
   - scope:
       path: "partitures"
       type: "pages"
@@ -23,5 +22,5 @@ defaults:
   - scope:
       path: ""
       type: "pages"
-    values:
-      layout: "default"
+      values:
+        layout: "abc_partiture"
