--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -25,14 +25,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Обновим до версии, используемой в convert-abc.js
+          node-version: '20'
 
       # Устанавливаем зависимости Node.js, указанные в package.json
       - name: Install Node.js dependencies
         run: npm install
 
       # Запускаем ваш скрипт convert-abc.js
-      # Он должен генерировать файлы в _site или в папку partitures, которую Jekyll будет обрабатывать
       - name: Generate partitures from ABC files using convert-abc.js
         run: |
           echo "🚀 Starting regeneration from ABC files using convert-abc.js"
@@ -49,16 +48,14 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1' # Сохраняем версию из рабочего файла
+          ruby-version: '3.1'
+          bundler-cache: true # Установит зависимости из Gemfile и закэширует их
 
-      # Устанавливаем Jekyll и плагин для relative links, если они используются
-      - name: Install Jekyll
-        run: gem install jekyll jekyll-relative-links
+      # bundle install автоматически выполнится благодаря bundler-cache: true
 
-      # Запускаем сборку Jekyll. Он возьмет файлы из корня и _includes/_layouts и сгенерирует в _site
-      # Так как convert-abc.js уже положил файлы в _site/partitures, Jekyll их тоже обработает/скопирует
+      # Запускаем сборку Jekyll с помощью bundle exec
       - name: Build with Jekyll
-        run: jekyll build --trace # --trace для получения более подробных логов в случае ошибки
+        run: bundle exec jekyll build --trace
         env:
           JEKYLL_ENV: production
 
@@ -70,8 +67,6 @@ jobs:
           echo "=== Key files verification ==="
           [ -f "_site/partitures/index.html" ] && echo "✅ _site/partitures/index.html exists" || echo "❌ _site/partitures/index.html missing"
           [ -f "_site/index.html" ] && echo "✅ _site/index.html exists" || echo "❌ _site/index.html missing"
-          # Проверьте, существуют ли другие ожидаемые файлы
-          # [ -f "_site/partitures/.../index.html" ] && echo "✅ ... exists" || echo "❌ ... missing"
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -80,7 +75,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./_site # Jekyll создает финальный сайт в _site
+          path: ./_site
 
   deploy:
     environment:
