--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,80 @@
+# Jekyll generated sites
 _site/
 .jekyll-cache/
+
+# Node.js dependencies
 node_modules/
-partitures/
+
+# Generated scores (from convert-abc.js)
 scores/
-build-and-serve.ps1
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS generated files
+Thumbs.db
+.DS_Store
+Desktop.ini
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Log files
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+
+# Build artifacts
+dist/
+build/
+*.tsbuildinfo
+
+# Backup files
+*.bak
+*.backup
+*.orig
+
+# System files
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory
+coverage/
+.nyc_output
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# dotenv environment variable files
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Local build/test files
+# build-and-serve.ps1
+xmas.html
